--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GameActivity"
-            android:label="Name"
+            android:name=".GameBlanksActivity"
+            android:label="Blanks"
+            />
+        <activity
+            android:name=".GameExplorationActivity"
+            android:label="Exploration"
             />
     </application>
 
