--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     //compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'org.osmdroid:osmdroid-android:5.5:release@aar'
-    compile 'com.github.MKergall:osmbonuspack:6.0'
+    compile 'org.osmdroid:osmdroid-android:5.6.4'
+    compile 'com.github.MKergall:osmbonuspack:6.3'
     //compile project(':volley')
 }
