--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        mavenCentral()
+        mavenLocal()
         jcenter()
     }
     dependencies {
@@ -14,6 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+        mavenLocal()
         jcenter()
         maven { url "https://jitpack.io" }
     }
